--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,18 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Python backend
+backend/venv/
+backend/__pycache__/
+backend/*.pyc
+backend/*.pyo
+backend/*.pyd
+backend/.Python
+backend/.env
+backend/recipe_history.json
+
+# Environment variables
+.env
+.env.local
+.env.production
